[workspace]
members = ["diskhashmap", "diskdashmap"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Fabian Murariu <fabian.murariu@gmail.com>"]
repository = "https://github.com/fabianmurariu/mapx2"
homepage = "https://github.com/fabianmurariu/mapx2"
documentation = "https://docs.rs/diskhashmap"
description = "High-performance disk-backed hash maps for Rust"
readme = "Readme.MD"
keywords = ["hashmap", "disk", "storage", "mmap", "database"]
categories = [
    "data-structures",
    "database-implementations",
    "memory-management",
]
rust-version = "1.85"
exclude = ["proptest-regressions/"]

[workspace.dependencies]
crossbeam-utils = "0.8.21"
rkyv = "0.8.11"
proptest = "1.7.0"
proptest-derive = "0.6.0"
memmap2 = "0.9.8"
tempfile = "3.20.0"
bytemuck = "1.23.1"
modular-bitfield = "0.12.0"
paste = "1.0.15"
rustc-hash = "2.1.1"
criterion = { version = "0.5", features = ["html_reports"] }
sled = "0.34.7"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.10.0"
parking_lot = "0.12"
thiserror = "2.0"

[profile.release-with-debug]
inherits = "release"
debug = true
