[package]
name = "diskdashmap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Multi-threaded disk-backed hash map with sharded locking (work in progress)"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
rkyv = ["diskhashmap/rkyv"]

[dependencies]
diskhashmap = { path = "../diskhashmap" }
parking_lot.workspace = true
rustc-hash.workspace = true
crossbeam-utils.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
