[package]
name = "diskmap"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]

modular-bitfield.workspace = true
bytemuck = { version = "1.16.0", features = ["derive"] }
memmap2.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
criterion = { workspace = true }
bytemuck.workspace = true
proptest = { workspace = true }
tempfile = { workspace = true }
paste.workspace = true
sled = { workspace = true }

[[bench]]
name = "hash_map_comparison"
harness = false
