[package]
name = "opendiskmap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Single-threaded disk-backed hash map with memory-mapped file backing"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rkyv.workspace = true

modular-bitfield.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
memmap2.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true }
bytemuck.workspace = true
proptest = { workspace = true }
tempfile = { workspace = true }
paste.workspace = true
sled = { workspace = true }
rand.workspace = true

[[bench]]
name = "hash_map_comparison"
harness = false

[[bench]]
name = "u64_key_benchmark"
harness = false
